@@ -1,6 +1,7 @@
 DFHack future
 
   Nothing yet!
+    - removebadthoughts: add --dry-run option
 
 DFHack v0.34.11-r2
 
